# venti-music

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
evals/: eval_pack.md  run_eval.py
evals/results/: FINDINGS.md  SUMMARY.md  scenario_01.txt  scenario_02.txt  scenario_03.txt  scenario_04.txt  scenario_05.txt  scenario_06.txt  scenario_07.txt  scenario_08.txt  scenario_09.txt  scenario_10.txt  scenario_11.txt  scenario_12.txt  scenario_13.txt  scenario_14.txt  scenario_15.txt
pulse/: pyproject.toml
pulse/data/sessions/: example_discharge.json  example_solace.json
pulse/pulse/: cli.py  inference.py  models.py  query_generator.py  spotify_client.py  storage.py  trajectory.py
pulse/tests/: test_inference.py  test_trajectory.py
tools/: introspect.py
